modulo de inicio y registro