@@ -1,99 +1,82 @@
 package com.empoderat.config.security;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.core.convert.converter.Converter;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
+@EnableMethodSecurity // ya no lleva prePostEnabled en SS6
 public class SecurityConfig {
 
-    // private static final String[] PUBLIC_ENDPOINTS = {
-    // "/api/auth/**",
-    // "/v3/api-docs/**",
-    // "/swagger-ui/**",
-    // "/swagger-ui.html",
-    // // Para pruebas iniciales, puedes permitir todos los endpoints
-    // // (elimina esto en producción)
-    // "/**"
-    // };
-
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
-                .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/api/**", "/v3/api-docs/**", "/swagger-ui/**", "/favicon.ico").permitAll() // Añadir
-                                                                                                                     // favicon.ico
+                .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(authz -> authz
+                        // Endpoints públicos
+                        .requestMatchers(
+                                "/api/auth/**",
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**",
+                                "/swagger-ui.html",
+                                "/actuator/health")
+                        .permitAll()
+                        // Endpoints protegidos
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/aprendiz/**").hasRole("APRENDIZ")
+                        .requestMatchers("/api/user/**").hasAnyRole("ADMIN", "APRENDIZ")
                         .anyRequest().authenticated())
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
 
         return http.build();
     }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:5173")); // Origen del frontend
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Auth-Token"));
-        configuration.setExposedHeaders(Collections.singletonList("Authorization"));
-        configuration.setAllowCredentials(true); // Permitir credenciales
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
-
+    /**
+     * Convierte el claim "realm_access.roles" de Keycloak en GrantedAuthority con
+     * prefijo "ROLE_".
+     */
     @Bean
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
-        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-        converter.setJwtGrantedAuthoritiesConverter(new KeycloakRoleConverter());
-        return converter;
+        JwtGrantedAuthoritiesConverter keycloakConverter = new JwtGrantedAuthoritiesConverter();
+        // Apunta al claim donde Keycloak deja los roles
+        keycloakConverter.setAuthoritiesClaimName("realm_access.roles");
+        // Prefijo ROLE_ para que Spring Security lo reconozca como rol
+        keycloakConverter.setAuthorityPrefix("ROLE_");
+
+        JwtAuthenticationConverter jwtAuthConverter = new JwtAuthenticationConverter();
+        jwtAuthConverter.setJwtGrantedAuthoritiesConverter(keycloakConverter);
+        return jwtAuthConverter;
     }
 
-    // Convierte roles de Keycloak a roles de Spring Security
-    static class KeycloakRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
-        @Override
-        public Collection<GrantedAuthority> convert(Jwt jwt) {
-            try {
-                // Extraer los roles desde el token JWT
-                Map<String, Object> realmAccess = (Map<String, Object>) jwt.getClaims().get("realm_access");
-                if (realmAccess == null || realmAccess.isEmpty()) {
-                    return Collections.emptyList();
-                }
+    /**
+     * Configuración CORS permitida para tu frontend en localhost.
+     */
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration cfg = new CorsConfiguration();
+        cfg.setAllowedOriginPatterns(List.of("http://localhost:5173", "http://localhost:5173"));
+        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        cfg.setAllowedHeaders(List.of("*"));
+        cfg.setAllowCredentials(true);
+        cfg.setExposedHeaders(List.of("Authorization"));
 
-                @SuppressWarnings("unchecked")
-                Collection<String> roles = (Collection<String>) realmAccess.get("roles");
-
-                return roles.stream()
-                        .map(role -> "ROLE_" + role.toUpperCase())
-                        .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
-            } catch (Exception e) {
-                // Manejo de errores
-                return Collections.emptyList();
-            }
-        }
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", cfg);
+        return source;
     }
 }
